[package]
name = "explainer"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[lib]
path="src/lib.rs"
name="explainer"

[[bin]]
path="src/main.rs"
name="expnamination_runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11.4", features = ["json", "multipart", "stream"] }
bytes = "1.0.1"
tokio = { version = "1", features = ["full"] }

colored = "2"
futures-util = "0.3.16"

rand = "0.8.4"
# to play audio from terminal
# rodio = "0.14.0"